--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,36 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Responsive Landing Page Template With Flexbox</title>
 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-
-</head>
+{% include head.html %}
 
 <body>
 
-	<header>
-		<h2><a href="#">Website Logo</a></h2>
-		<nav>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Products</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contacts</a></li>
-		</nav>
-	</header>
+	{% include header.html %}
 
 
 	<section class="hero">
 		<div class="background-image" style="background-image: url(assets/img/hero.jpg);"></div>
-		<h1>Responsive Flexbox Template</h1>
+		<h1>The ultimate guide for </h1>
 		<h3>A freebie by Tutorialzine.</h3>
-		<a href="http://tutorialzine.com/2016/06/freebie-landing-page-template-with-flexbox/" class="btn">Download it Here</a>
+		
+		<form action="https://formspree.io/mchallberg09@gmail.com"
+              method="POST">
+			<input type="email" name="_replyto" placeholder="Email">
+			<input type="submit" class="btn" value="Subscribe now">
+		</form>
 	</section>
 
 
