--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,26 @@
 	box-sizing: border-box;
 }
 
+form {
+	padding: 15px;
+	flex: 1;
+	margin-right: 30px;
+	font-size: 18px;
+	color: #555;
+}
+
+form input {
+	padding: 15px;
+	flex: 1;
+	margin-right: 30px;
+	font-size: 18px;
+	color: #555;
+}
+
+h1, h2, h3, h4, h5 {
+	font-family: 'Open Sans', sans-serif;
+}
+
 html{
 	font: normal 16px sans-serif;
 	color: #555;
@@ -52,6 +72,10 @@ section{
 	align-items: center;
 
 	padding: 125px 100px;
+}
+
+p {
+	font-family: 'Lato', sans-serif;
 }
 
 @media (max-width: 1000px){
@@ -112,7 +136,7 @@ header{
 }
 
 header h2{
-	font-family: 'Quicksand', sans-serif;
+	font-family: 'Lato', sans-serif;
 }
 
 header nav{
