--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,21 +9,53 @@
 
 
 	<section class="hero">
-		<div class="background-image" style="background-image: url(assets/img/hero.jpg);"></div>
-		<h1>The ultimate guide for </h1>
-		<h3>A freebie by Tutorialzine.</h3>
-		
-		<form action="https://formspree.io/mchallberg09@gmail.com"
-              method="POST">
-			<input type="email" name="_replyto" placeholder="Email">
-			<input type="submit" class="btn" value="Subscribe now">
-		</form>
+		<div class="hero-width">
+			<h1>The best email course to learn about digital currencies.</h1>
+			<h3>Learn how to diversify your portfolio by investing in bitcoin and other digital currencies.</h3>
+			
+			<form action="https://formspree.io/mchallberg09@gmail.com"
+	              method="POST">
+				<input class="cta-input" type="email" name="_replyto" placeholder="Enter your email">
+				<input type="submit" class="btn" value="Get Started">
+			</form>
+		</div>
 	</section>
 
 
+	<section class="features">
+		<h3 class="title">Would you have invested in the internet in 1990?</h3>
+		<p>There's a unparalleled opportunity today to invest in the future. Digital currencies like Bitcoin are built on blockchain technology.  It has the potential to change how all of us interact on the internet. The difference between 1990 and 2017 is that you have the opportunity to invest in the future.</p>
+		<hr>
+
+		<ul class="grid">
+			<li>
+				<i class="fa fa-camera-retro"></i>
+				<h4>24/7</h4>
+				<p>We're learning and monitoring blockchain technology's progress. We curate the best content and share it with you so you're never out of touch.</p>
+			</li>
+			<li>
+				<i class="fa fa-newspaper-o"></i>
+				<h4>5,000+</h4>
+				<p>Join thousands of others who are learning what the future potential holds in cryptocurrencies and blockchain technology.</p>
+			</li>
+			<li>
+				<i class="fa fa-cubes"></i>
+				<h4>1</h4>
+				<p>Monthly newsletter that we send out with tips, best practices, trends, and information on investing in emerging digital currencies.
+</p>
+			</li>
+		</div>
+	</section>
+
 	<section class="our-work">
-		<h3 class="title">Some of our work</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
+		<h3 class="title">Our Story</h3>
+		<p>We're Alex and Matt. Two friends who are passionate about technology and sharing our knowledge with others. In 2013 we heard about this thing call Bitcoin.
+			Like many of you, we thought it sounded interesting but it might just be a passing fad. We paid little attention to it at the time. Fast forward to early 2017
+			when Bitcoin and other digital currenies started making headlines on major news outlets like CNN. After the market skyrocketed, we knew we wanted to dive deeper
+			into the techoology behind digital currencies. It turns out that there's a lot going on behind the scenes. We're not just dealing with "virtual money" here. 
+			The technology powering many of the most popular digital currencies actually has amazing opportunity to transform industries from finance to healthcare.
+		
+		</p>
 		<hr>
 
 		<ul class="grid">
@@ -35,29 +67,7 @@
 	</section>
 	
 
-	<section class="features">
-		<h3 class="title">Features and services</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
-		<hr>
-
-		<ul class="grid">
-			<li>
-				<i class="fa fa-camera-retro"></i>
-				<h4>Photography</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices vitae pulvinar velit.</p>
-			</li>
-			<li>
-				<i class="fa fa-cubes"></i>
-				<h4>Web Development</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices vitae pulvinar velit.</p>
-			</li>
-			<li>
-				<i class="fa fa-newspaper-o"></i>
-				<h4>Content Editing</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices vitae pulvinar velit.</p>
-			</li>
-		</div>
-	</section>
+	
 
 
 	<section class="reviews">
