--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,11 +8,21 @@
 	box-sizing: border-box;
 }
 
+input {
+	border: 1px solid #d3d9dc;
+	box-shadow: 0 1px 1px rgba(0,0,0,.05);
+	background: #fff;
+	border-radius: 4px;
+	color: #333;
+	outline: none;
+	border-color: #ccc;
+}
+
 form {
 	padding: 15px;
 	flex: 1;
 	margin-right: 30px;
-	font-size: 18px;
+	font-size: 16px;
 	color: #555;
 }
 
@@ -20,17 +30,16 @@ form input {
 	padding: 15px;
 	flex: 1;
 	margin-right: 30px;
-	font-size: 18px;
+	font-size: 16px;
 	color: #555;
 }
 
 h1, h2, h3, h4, h5 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Lato', sans-serif;
 }
 
 html{
 	font: normal 16px sans-serif;
-	color: #555;
 }
 
 ul, nav{
@@ -49,19 +58,26 @@ a:hover{
 	opacity: 1;
 }
 
-a.btn{
-	color: #fff;
-	border-radius: 4px;
-	text-transform: uppercase;
-	background-color: #2196F3;
-	font-weight: 800;
-	text-align: center;
+.btn {
+	  padding: 18px 20px;
+    font-weight: 500;
+    border-radius: 4px;
+    letter-spacing: 1.3px;
+    background: #4f6df5;
+    display: inline-block;
+    color: #fff;
+    border: none;
+    box-shadow: 0 2px 3px rgba(0,0,0,.05);
+    text-transform: none;
+    letter-spacing: 0;
+    font-size: 16px;
+    transition: all .2s cubic-bezier(.03,1.12,.64,.99);
 }
 
 hr{
 	width: 150px;
 	height: 2px;
-	background-color: #2196F3;
+	background-color: #4f6df5;
 	border: 0;
 	margin-bottom: 80px;
 }
@@ -86,23 +102,22 @@ p {
 
 }
 
-@media (max-width: 600px){
+@media (max-width: 600px) {
 
-	section{
+	section {
 		padding: 80px 30px;
 	}
 
 }
 
-section h3.title{
-	color: #414a4f;
+section h3.title {
 	text-transform: capitalize; 
-	font: bold 32px 'Open Sans', sans-serif;
+	font: bold 32px 'Lato', sans-serif;
 	margin-bottom: 35px;
 	text-align: center;
 }
 
-section p{
+section p {
 	max-width: 800px;
 	text-align: center;
 	margin-bottom: 35px;
@@ -118,11 +133,26 @@ ul.grid{
 }
 
 
+
+/*-------------
+ Forms and Buttons
+-------------*/
+
+.cta-input {
+	padding: 18px;
+	max-width: 290px;
+	margin-right: 10px;
+}
+.cta-input:focus {
+	border-color: #4f6df5;
+	box-shadow: 0 0 0 1px #4f6df5;
+}
+
 /*-------------
  	Header
 -------------*/
 
-header{
+header {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -131,8 +161,7 @@ header{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	color: #fff;
-	padding: 35px 100px 0;
+	padding: 5px 50px 0;
 }
 
 header h2{
@@ -180,11 +209,10 @@ header nav li:last-child{
  	Hero Section
 ----------------*/
 
-.hero{
+.hero {
 	position: relative;
 	justify-content: center;
 	min-height: 100vh;
-	color: #fff;
 	text-align: center;
 }
 
@@ -195,7 +223,6 @@ header nav li:last-child{
 	width: 100%;
 	height: 100%;
 	background-size: cover;
-	background-color: #2196F3;
 	z-index: -1;
 }
 
@@ -211,13 +238,19 @@ header nav li:last-child{
 }
 
 .hero h1{
-	font: bold 60px 'Open Sans', sans-serif;
+	font: bold 44px 'Lato', sans-serif;
 	margin-bottom: 15px;
 }
 
 .hero h3{
-	font: normal 28px 'Open Sans', sans-serif;
+	font: normal 18px 'Lato', sans-serif;
+	color: #535971;
+	line-height: 1.5;
 	margin-bottom: 40px;
+}
+
+.hero-width {
+	width: 75%;
 }
 
 .hero a.btn{
@@ -301,7 +334,7 @@ header nav li:last-child{
 
 .features .grid li i{
     font-size: 50px;
-    color: #2196F3;
+    color: #4f6df5;
     margin-bottom: 25px;
 }
 
